19. Try to display group volume dialog under button.
20. In desktop layout with MAI installed '(i)' button shows track info.
21. Remove options to collapse multi-disc albums.
22. When showing multi-disc albums add a 'Scroll to disc' menu entry in
    actions menu.
23. Hide 'Sort by' menu option if there is only 1 album.
24. Fix flicker when show 'Help' page.

3.3.5
-----
1. Fix inactive bottom navigation icons when using coloured toolbars with a
   light theme.
2. Add extra icon mapping for Pandora.

3.3.4
-----
1. Fix enable/disable alarms.
2. Fix hiding of items for party mode when using grid view.

3.3.3
-----
1. Fix toggling of alarms by clicking on checkbox.
2. Fix toggling of continuous mode in random mix dialog.
3. Update native top/bottom colours when screensaver fades in and out.

3.3.2
-----
1. Fix browse view start-up when set to use grid.
2. Fix toggling of alarms.
3. Fix dropping external files onto queue.
4. Attempt to stop pressing 'Esc' whilst dragging causing browse view to
   navigate back.

3.3.1
-----
1. Fix 'Copy browse selection here'
2. Fix removing selected items from queue.
3. Only check for local files if 'Music and Artist Information' is installed.
4. Don't show tech info in desktop bottom bar if using large fonts and showing
   ratings - not enough space.
5. Ensure screensaver always starts in center.
6. Fix dropping from browse onto empty queue.

3.3.0
-----
 1. Material-3 like bottom navigation bar for mobile layout.
 2. Material-3 like switches.
 3. More rounded dialogs.
 4. Remove shadows from dialogs, volume popup, and menus.
 5. Less rounded chips.
 6. Add 'Kiosk' mode; hide all main menu items (except custom actions), and
    allow configuring which actions are available.
 7. Refactor volume handling to throttle volume change requests.
 8. Better layout of now playing when using very wide views.
 9. If sorting of favourites is enabled, then also sort 'Radio / My Presets'
10. Add some missing shortcut in tooltips.